2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclNamesp.c (Tcl_FindNamespaceVar): second change
	needed, new test failure in namespace-34.7 (added below so that
	the list is complete): [namespace which -variable] does not find
	global variables.
	
	. Tk and Itcl tests show no difference to HEAD; XOTcl testsuite
	  errors out and does not finish 

2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	All remaining test failures are actually testing the behaviour
	that the TIP disables:
	. namespace-old: 5.4 6.12 6.14-15
	. namespace: 14.3 14.5 14.12 17.7 17.10 34.7

	* tests/namespace.test (namespace-2.2): refer to global vars
	explicitly (not what was being tested). Missed in the big patch. 

	* tests/var.test (var-3.4,7.5,7.8): refer to global vars
	explicitly (not what was being tested). Missed in the big patch. 
	
	* tests/parse.test: refer to global vars explicitly (not what was
	being tested). Missed in the big patch. 
	
	* generic/tclVar.c: minimal change, provides behaviour of TIP 278
	but without any optimisation yet. Failures in namespace-old.test,
	namespace.test, parse.test and var.test: testfiles not yet updated.    
	
==
== updated to tag tip-278-20061009
==
	
2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* tests/*.test: updated all tests to refer explicitly to the
	global variables ::errorInfo, ::errorCode, ::env and
	::tcl_platform: many were relying on the alternative lookup in the
	global namespace, that feature is tested specifically in namespace
	and variable tests.
	The modified testfiles are: apply.test, basic.test, case.test,
	cmdIL.test, cmdMZ.test, compExpr-old.test, error.test, eval.test,
	event.test, expr.test, fileSystem.test, for.test, http.test,
	if.test, incr-old.test, incr.test, interp.test, io.test,
	ioCmd.test, load.test, misc.test, namespace.test, parse.test,
	parseOld.test, pkg.test, proc-old.test, set.test, switch.test,
	tcltest.test, thread.test, var.test, while-old.test, while.test.

==	