@@ -14,7 +14,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: namespace-old.test,v 1.9 2004/08/27 14:39:14 dkf Exp $
+# RCS: @(#) $Id: namespace-old.test,v 1.9.8.1 2006/10/10 20:25:04 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -301,12 +301,13 @@ test namespace-old-5.3 {namespace qualifiers work in namespace command} {
          [namespace eval ::test_ns_hier1::test_ns_hier2 {namespace current}]
 } {::test_ns_hier1 ::test_ns_hier1::test_ns_hier2 ::test_ns_hier1::test_ns_hier2}
 
+# TIP 278: secondary lookup disabled for vars, tests disabled with #
 test namespace-old-5.4 {nested namespaces can access global namespace} {
-    list [namespace eval test_ns_hier1 {set test_ns_var_global}] \
+    list [namespace eval test_ns_hier1 {#set test_ns_var_global}] \
          [namespace eval test_ns_hier1 {test_ns_cmd_global}] \
-         [namespace eval test_ns_hier1::test_ns_hier2 {set test_ns_var_global}] \
+         [namespace eval test_ns_hier1::test_ns_hier2 {#set test_ns_var_global}] \
          [namespace eval test_ns_hier1::test_ns_hier2 {test_ns_cmd_global}]
-} {{var in ::} {cmd in ::} {var in ::} {cmd in ::}}
+} {{} {cmd in ::} {} {cmd in ::}}
 
 test namespace-old-5.5 {variables in different namespaces don't conflict} {
     list [set test_ns_hier1::test_ns_level] \
@@ -491,11 +492,12 @@ test namespace-old-6.11 {commands affect all parent namespaces} {
     list [test_ns_cache1::trigger] [test_ns_cache1::test_ns_cache2::trigger]
 } {{cache2 version} {cache2 version}}
 
+# TIP 278: secondary lookup disabled, catch added, result changed from {global version}
 test namespace-old-6.12 {define test variables} {
     variable test_ns_cache_var "global version"
     set trigger {set test_ns_cache_var}
-    namespace eval test_ns_cache1 $trigger
-} {global version}
+    list [catch {namespace eval test_ns_cache1 $trigger} msg] $msg
+} {1 {can't read "test_ns_cache_var": no such variable}}
 
 test namespace-old-6.13 {one-level check for variable shadowing} {
     namespace eval test_ns_cache1 {
@@ -504,21 +506,23 @@ test namespace-old-6.13 {one-level check for variable shadowing} {
     namespace eval test_ns_cache1 $trigger
 } {cache1 version}
 
+# TIP 278: secondary lookup disabled, catch added, result changed from {global version}
 test namespace-old-6.14 {deleting variables changes variable epoch} {
     namespace eval test_ns_cache1 {
         unset test_ns_cache_var
     }
-    namespace eval test_ns_cache1 $trigger
-} {global version}
+    list [catch {namespace eval test_ns_cache1 $trigger} msg] $msg
+} {1 {can't read "test_ns_cache_var": no such variable}}
 
+# TIP 278: secondary lookup disabled, catch added, result changed
 test namespace-old-6.15 {define test namespaces} {
     namespace eval test_ns_cache2 {
         variable test_ns_cache_var "global cache2 version"
     }
     set trigger2 {set test_ns_cache2::test_ns_cache_var}
-    list [namespace eval test_ns_cache1 $trigger2] \
-         [namespace eval test_ns_cache1::test_ns_cache2 $trigger]
-} {{global cache2 version} {global version}}
+    catch {list [namespace eval test_ns_cache1 $trigger2] \
+	       [namespace eval test_ns_cache1::test_ns_cache2 $trigger]}
+} 1
 
 test namespace-old-6.16 {public variables affect all parent namespaces} {
     variable test_ns_cache1::test_ns_cache2::test_ns_cache_var "cache2 version"
