@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: namespace.test,v 1.56.2.2 2006/10/10 18:07:31 msofer Exp $
+# RCS: @(#) $Id: namespace.test,v 1.56.2.3 2006/10/10 20:25:04 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -558,11 +558,15 @@ test namespace-14.2 {TclGetNamespaceForQualName, invalid absolute names} {
              [catch {namespace children test_ns_777} msg] $msg
     }
 } {1 {can't read "::test_ns_777::v": no such variable} 1 {unknown namespace "test_ns_777" in namespace children command}}
+
+# TIP 278: secondary lookup disabled, results changed from {10 20}
 test namespace-14.3 {TclGetNamespaceForQualName, relative names} {
     namespace eval test_ns_1 {
-        list $v $test_ns_2::v
+        # list $v $test_ns_2::v
+        list [catch {set v} msg] $msg  [catch {set test_ns_2::v} msg] $msg
     }
-} {10 20}
+} {1 {can't read "v": no such variable} 0 20}
+
 test namespace-14.4 {TclGetNamespaceForQualName, relative ns names looked up only in current ns} {
     namespace eval test_ns_1::test_ns_2 {
         namespace eval foo {}
@@ -577,9 +581,8 @@ test namespace-14.5 {TclGetNamespaceForQualName, relative ns names looked up onl
         namespace eval bar {}
     }
     namespace eval test_ns_1 {
-        set l [list [catch {namespace delete test_ns_2::bar} msg] $msg]
+        list [catch {namespace delete test_ns_2::bar} msg] $msg
     }
-    set l
 } {1 {unknown namespace "test_ns_2::bar" in namespace delete command}}
 test namespace-14.6 {TclGetNamespaceForQualName, relative ns names looked up only in current ns} {
     namespace eval test_ns_1::test_ns_2 {
@@ -616,14 +619,16 @@ test namespace-14.11 {TclGetNamespaceForQualName, extra ::s are significant for 
     proc test_ns_1::test_ns_2:: {args} {return "\{\}: $args"}
     lappend l [test_ns_1::test_ns_2:: hello]
 } {1 {invalid command name "test_ns_1::test_ns_2::"} {{}: hello}}
+
+# TIP 278: secondary lookup disabled, added catch, result changed from y
 test namespace-14.12 {TclGetNamespaceForQualName, extra ::s are significant for vars} {
     catch {namespace delete {expand}[namespace children :: test_ns_*]}
     namespace eval test_ns_1 {
         variable {}
-        set test_ns_1::(x) y
+        catch {set test_ns_1::(x) y} ::msg
     }
-    set test_ns_1::(x)
-} y
+    list $::msg [catch {set test_ns_1::(x)} msg] $msg
+} {{can't set "test_ns_1::(x)": parent namespace doesn't exist} 1 {can't read "test_ns_1::(x)": no such variable}}
 test namespace-14.13 {TclGetNamespaceForQualName, namespace other than global ns can't have empty name} {
     catch {namespace delete {expand}[namespace children :: test_ns_*]}
     list [catch {namespace eval test_ns_1 {proc {} {} {}; namespace eval {} {}; {}}} msg] $msg
@@ -766,12 +771,14 @@ test namespace-17.6 {Tcl_FindNamespaceVar, relative name found} {
         set x
     }
 } {777}
+
+# TIP 278: secondary lookup disabled, catch added, result changed from 314159
 test namespace-17.7 {Tcl_FindNamespaceVar, relative name found} {
     namespace eval test_ns_1 {
         unset x
-        set x  ;# must be global x now
+        list [catch {set x} msg] $msg  ;# must not be global x now
     }
-} {314159}
+} {1 {can't read "x": no such variable}}
 test namespace-17.8 {Tcl_FindNamespaceVar, relative name not found} {
     namespace eval test_ns_1 {
         list [catch {set wuzzat} msg] $msg
@@ -783,6 +790,8 @@ test namespace-17.9 {Tcl_FindNamespaceVar, relative name and TCL_GLOBAL_ONLY} {
     }
     set test_ns_1::a
 } {hello}
+
+# TIP 278: secondary lookup disabled, result changed from 1
 test namespace-17.10 {Tcl_FindNamespaceVar, interference with cached varNames} {
     namespace eval test_ns_1 {}
     proc test_ns {} {
@@ -795,7 +804,7 @@ test namespace-17.10 {Tcl_FindNamespaceVar, interference with cached varNames} {
     namespace eval test_ns_1 set a 1
     namespace delete test_ns_1
     set a
-} 1
+} 0
 catch {unset a}
 catch {unset x}
 
@@ -1300,14 +1309,16 @@ test namespace-34.6 {NamespaceWhichCmd, -command is default} {
              [namespace which ::test_ns_2::cmd2]
     }
 } {::foreach ::test_ns_3::p ::test_ns_3::cmd1 ::test_ns_2::cmd2}
+
+# TIP 278: secondary lookup disabled, catch added, result changed
 test namespace-34.7 {NamespaceWhichCmd, variable lookup} {
     namespace eval test_ns_3 {
-        list [namespace which -variable env] \
+        list [catch {namespace which -variable env } msg] $msg \
              [namespace which -variable v3] \
              [namespace which -variable ::test_ns_2::v2] \
              [catch {namespace which -variable ::test_ns_2::noSuchVar} msg] $msg
     }
-} {::env ::test_ns_3::v3 ::test_ns_2::v2 0 {}}
+} {0 {} ::test_ns_3::v3 ::test_ns_2::v2 0 {}}
 
 test namespace-35.1 {FreeNsNameInternalRep, resulting ref count > 0} {
     catch {namespace delete {expand}[namespace children :: test_ns_*]}
